# sciencebasepy

./: .gitignore  Authentication Options.ipynb  Batch Processing.ipynb  DISCLAIMER.md  LICENSE  LICENSE.md  Makefile  README.md  Searching ScienceBase with Pysb.ipynb  Searching ScienceBase with ScienceBasePy.ipynb  __init__.py  code.json  demo-legacy.py  demo.py  demoEx.py  demoEx2.py  demoEx3.py  publish_tests.py  pyproject.toml  pysb.py  readme.md  readme.txt  requirements.txt  sciencebase-cli.py  search.md  setup.py  test_sciencebasepy.py  tests.py
pysb/: SbSession.py  SbSessionCompatibility.py  __init__.py  pysb.py
sb3/: SbSessionEx.py  auth.py  client.py  querys.py
sciencebasepy/: SbSession.py  __init__.py
test/data/FHP_Great_Lakes_Basin_boundary/: FHP_Great_Lakes_Basin_boundary.dbf  FHP_Great_Lakes_Basin_boundary.sbx  FHP_Great_Lakes_Basin_boundary.shp  FHP_Great_Lakes_Basin_boundary.shp.xml  FHP_Great_Lakes_Basin_boundary.shx
tests/: test_auth.py  test_login.py  test_sbsessionex.py  test_upload.py
tests/data/FHP_Great_Lakes_Basin_boundary/: FHP_Great_Lakes_Basin_boundary.sbn
